--- a/GameOfLife.csproj
+++ b/GameOfLife.csproj
@@ -5,29 +5,14 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-        <PlatformTarget>x64</PlatformTarget>
+        <PlatformTarget>anycpu</PlatformTarget>
     </PropertyGroup>
 
-    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-        <PlatformTarget>x64</PlatformTarget>
-    </PropertyGroup>
-    
     <ItemGroup>
-        <Content Include="Assets\**\*">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="SDL2\**\*">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
+        <Content Include="Assets\**" CopyToOutputDirectory="PreserveNewest"/>
+        <Content Include="SDL2\**" CopyToOutputDirectory="PreserveNewest"/>
     </ItemGroup>
 
 </Project>
